--- a/source/sass/blocks/_hero.scss
+++ b/source/sass/blocks/_hero.scss
@@ -1,7 +1,4 @@
 .hero {
-  height: calc(100vh - 9.4rem);
-  min-height: -webkit-fill-available;
-  padding-top: 4rem;
   &__container {
     min-height: 100%;
     position: relative;
@@ -10,7 +7,7 @@
     justify-content: center;
   }
   &__body {
-
+    padding-top: clamp(5rem, 8.4375vw, 8.4375rem);
     max-width: 65.25rem;
     margin-inline: auto;
     width: 100%;
@@ -23,7 +20,7 @@
       background-repeat: no-repeat;
       background-position: top;
       z-index: -1;
-      top: 39%;
+      top: calc(39% + clamp(2rem, 4vw, 4rem));
       left: 50%;
       transform: translate(-44%, -50%);
     }
